--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,34 @@
   text-align: center;
 }
 
+.App button {
+  border: 1px solid blue;
+  padding: 16px;
+  background-color: green;
+  font: inherit;
+  color: white;
+  cursor: pointer;
+}
+
+.App button:hover{
+  background-color: lightgreen;
+  color: black;
+}
+
+.App button.Red {
+  background-color: red;
+}
+
+.App button.Red:hover {
+  background-color: salmon;
+  color: black;
+}
 .red {
-  color: red;
+  color: rgb(209, 68, 68);
+  text-shadow: 1px 1px rgba(83, 83, 83, 0.63);
 }
 
 .bold {
   font-weight: bold;
 }
+
